[metadata]
name = rpmget
description = A workflow helper to manage random sets of RPM package deps.
url = http://github.com/sarnold/rpmget
author = Stephen Arnold
author_email = stephen.arnold42@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license_expression = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Framework :: tox
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development
    Topic :: Software Development :: Testing
    Topic :: Utilities

project_urls =
    Homepage = https://github.com/sarnold/rpmget
    Documentation = https://sarnold.github.io/rpmget/
    Repository = https://github.com/sarnold/rpmget.git
    Issues = https://github.com/sarnold/rpmget/issues
    Changelog = https://github.com/sarnold/rpmget/blob/main/CHANGELOG.rst

[options]
python_requires = >=3.8

setup_requires =
    setuptools_scm[toml]

install_requires =
    cerberus>=1.3.4
    httpx>=0.23.0
    munch>=2.5.0
    tqdm>=4.59.0
    platformdirs>=2.5.4

packages = find_namespace:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    rpmget = rpmget.rpmget:main

# deps are included here mainly for local/venv installs using pip
# otherwise deps are handled via tox, ci config files or pkg managers
[options.extras_require]
dev =
    doorstop
    flake8
    isort
    mypy>=0.990
    black>=22.3.0
    pylint>=3.1.0
doc =
    sphinx
    sphinx_git
    myst-parser
    sphinx_rtd_theme<3.0
    sphinxcontrib-apidoc
    sphinxcontrib.mermaid
test =
    pytest
    pytest-cov
    pytest-dependency
cov =
    coverage[toml]
    coverage_python_version
all =
    %(dev)s
    %(doc)s
    %(test)s
    %(cov)s

[check]
metadata = true
restructuredtext = true
strict = false

[flake8]
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs,
    test

max-line-length = 90
extend-ignore = E203
